<?xml version="1.0"?>
<package>
  <name>pprzros</name>
  <version>0.1.0</version>
  <description>
    PPRZROS package -- PPRZLINK/ROS communication node
    to use with the Paparazzi UAV System
  </description>

  <maintainer email="guido@todo.todo">guido</maintainer>
  <author email="guido@todo.todo">guido</author>
  <author email="gautier.hattenberger@enac.fr">Gautier Hattenberger</author>
  <license>GPLv3</license>
  <!-- <url type="website">http://wiki.ros.org/pprzros</url> -->
  <url type="website">http://paparazziuav.org</url>
  <url type="repository">http://github.com/enacuavlab/pprzros.git</url>
  <url type="bugtracker">http://github.com/enacuavlab/pprzros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <!--build_depend>pprzlink</build_depend-->
  <depend>rospy</build_depend>

  <!-- message packages -->
  <depend>pprzros_msgs</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
