<?xml version="1.0"?>
<package format="2">
  <name>pprzros_demo</name>
  <version>0.1.0</version>
  <description>Demo for PPRZROS package</description>

  <maintainer email="gautier.hattenberger@enac.fr">Gautier Hattenberger</maintainer>
  <author email="gautier.hattenberger@enac.fr">Gautier Hattenberger</author>
  <author email="guido@todo.todo">guido</author>

  <license>GPLv3</license>
  <!-- <url type="website">http://wiki.ros.org/pprzros</url> -->
  <url type="website">http://paparazziuav.org</url>
  <url type="repository">http://github.com/enacuavlab/pprzros.git</url>
  <url type="bugtracker">http://github.com/enacuavlab/pprzros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pprzros</depend>
  <depend>pprzros_msgs</depend>

  <export>
  </export>
</package>
