<?xml version="1.0"?>
<package>
  <name>pprzros_msgs</name>
  <version>0.1.0</version>
  <description>
    pprzros_msgs messages definition
  </description>

  <maintainer email="guido@todo.todo">guido</maintainer>
  <author email="guido@todo.todo">guido</author>
  <author email="gautier.hattenberger@enac.fr">Gautier Hattenberger</author>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <!--run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend-->

  <export>
    <architecture_independent/>
  </export>
</package>
